<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PaymentSuccessFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_700"
        android:contentDescription="@string/paymentlogo"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/good"
            android:src="@drawable/ic_check" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/payment_success"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_product_will_be_delivered_shortly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goBackHomeButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/purple_700"
        android:text="@string/continue_shopping"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doMoreShopping"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:text="@string/go_back_home"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackHomeButton" />


    <TextView
        android:id="@+id/Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rate_your_experience"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doMoreShopping" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="101dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rate"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/veryHappy"
            android:layout_width="45dp"
            android:layout_height="37dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/emoji"
            android:src="@drawable/happiness_emoji"
            android:text="@string/very_happy" />

        <ImageView
            android:id="@+id/happy"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/smiley"
            android:contentDescription="@string/emoji"
            android:text="@string/happy" />

        <ImageView
            android:id="@+id/confuse"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/confuse_emoji"
            android:contentDescription="@string/emoji"
            android:text="@string/confuse" />

        <ImageView
            android:id="@+id/angry"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/angry_emoji"
            android:text="@string/angry"
            android:contentDescription="@string/emoji" />

        <ImageView
            android:id="@+id/veryAngry"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:src="@drawable/very_angry_emoji"
            android:contentDescription="@string/emoji"
            android:text="@string/very_angry" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>