<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backgroundsignupimage"
                android:src="@drawable/background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gadgex"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35sp"
                android:text="@string/bringing_the_future_closer_through_technology"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            android:layout_marginTop="25sp"
            android:layout_marginHorizontal="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="310dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:autofillHints="emailAddress"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/black"
                android:padding="7dp"
                android:textColorLink="@color/purple_700"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:layout_marginHorizontal="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="310dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:hint=""
                android:autofillHints="password"
                android:inputType="textWebPassword"
                android:textColor="@color/black"
                android:padding="7dp"
                android:textColorLink="@color/purple_700"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:textSize="12sp"
                    android:backgroundTint="@color/purple_700"
                    android:layout_marginTop="8dp"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="80dp"
                    android:text="@string/forgotten_password"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="220dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"
            android:background="@drawable/border"
            android:padding="7dp"
            android:text="Login"
            android:enabled="true"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet"/>

            <TextView
                android:id="@+id/signupOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>