<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="150dp"
        android:layout_height="140dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/phoneimage"
            android:scaleType="fitXY"
            android:src="@drawable/head_set" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item1"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/price1"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="117dp"
            android:progressTint="@color/starColour"
            android:numStars="5"
            android:rating="5"
            android:scaleX=".8"
            android:scaleY=".6"
            android:stepSize="0.1" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
