<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_tint"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menufragment.LogoutFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="298dp"
        android:layout_height="146dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="50dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/are_sure_you_want_to_log_out"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.51"
            tools:layout_editor_absoluteY="192dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/border_card"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="319dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/border_card"
            android:backgroundTint="@color/purple_700"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="273dp"
            tools:layout_editor_absoluteY="319dp" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>